--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ionicons": "^4.6.3",
     "jquery": "^3.5.1",
     "mapbox-gl": "^1.12.0",
+    "moment": "^2.29.4",
     "morris.js": "^0.5.0",
     "ng-fullcalendar": "^2.0.3",
     "ng2-charts": "^2.4.2",
